2004-03-14  Jon Phillips <jon@jonphillips.info>

    * src/toolbox.cpp src/verbs.cpp src/interface.cpp share/icons/icons.svg: 
      I added all the icons in the VIEW menu. They might need some tweaking, 
      but its a start. I also cleaned up some coding conventions for these 
      files. 

2004-03-14  Bryce Harrington <bryce@bryceharrington.com>

	* src/view.cpp:  Adding an accumulator function for checking
  	  return values of shutdown signal handlers, so that if any one of
	  them returns a value indicating an abort of the shutdown, the
	  shutdown process will be aborted.

2004-03-14  Ted Gould <ted@gould.cx>

	* src/extension/extension.cpp, src/extension/extension.h,
      src/extension/internal/ps.cpp: Adding in parameters for extensions.
	  This will make it so that extensions can have easy settings that
	  are used.  They are not currently persistent - but that will be
	  a future feature.

2004-03-14  MenTaLguY <mental@rydia.net>

	* src/ast/*: more AST sketching

	* src/xml/repr.cpp: existing listeners were getting dropped when new
	  listeners were added; this fix makes the behavior documented in
	  bug #896706 a little worse, but fixes bug #915913

	* src/sp-use.cpp: SPUse does not need to manually detach its child
	  anymore, so now it doesn't

	* src/sp-object.cpp: detach our SPRepr listener before we start
	  releasing our children, which makes listener removal faster (since
	  we are then always removing from the beginning of the listener
	  list -- i.e. removing in roughly the order in which they were added)
	  This should help bug #896706 a little more.

    * src/event-context.cpp, src/node-context.cpp, src/rect-context.cpp,
	  src/sp-object.cpp, src/sp-offset.cpp, src/dialogs/desktop-properties.cpp,
	  src/dialogs/xml-tree.cpp, src/widgets/sp-widget.cpp,
	  src/widgets/sp-xmlview-attr-list.cpp, src/widgets/sp-xmlview-tree.cpp,
	  src/xml/repr-private.h, src/xml/repr-util.cpp, src/xml/repr.cpp,
	  src/xml/repr.h: